Revert "Revert "Revert "related-content: css updates/refactor for carousel arrows and spacing, along with mobile responsiveness fixes"""
This reverts commit 264f3cf49122a64b8d6b8cb47c4c4b18c4b08834.

--- a/content-types/related-content/css/main.css
+++ b/content-types/related-content/css/main.css
@@ -1,10 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap");
 
-/* .brand-stories__related-content {
-  margin: 0 15px;
-} */
-
 .brand-stories__related-content .related-content__title {
   display: flex;
   justify-content: space-between;
@@ -36,12 +32,6 @@
   color: #900028;
 }
 
-.brand-stories__related-content .related-content__stories.row {
-  position: relative;
-  overflow: hidden;
-  margin: 0 0;
-}
-
 .brand-stories__related-content .related-content__stories.row .slide-container {
   display: flex;
   flex-wrap: nowrap; /* No wrapping for carousel effect */
@@ -65,11 +55,11 @@
   height: 100%;
   scroll-snap-align: start;
   text-align: center; /* Center the content */
-  /* padding-left: 0 !important;
-  padding-right: 0 !important; */
+  padding-left: 0 !important;
+  padding-right: 0 !important;
   margin-bottom: 10px;
-  /* margin-right: 10px;
-  margin-left: 10px; */
+  margin-right: 10px;
+  margin-left: 10px;
   height: auto;
 }
 
@@ -129,6 +119,11 @@
   margin-left: 26px;
 }
 
+.brand-stories__related-content .related-content__stories.row {
+  position: relative;
+  overflow: hidden;
+}
+
 /* FOR SLIDER ARROWS */
 .brand-stories__related-content .carousel-arrows {
   position: absolute;
@@ -160,17 +155,14 @@
   opacity: 1;
 }
 
-.brand-stories__related-content .carousel-arrow.next,
-.brand-stories__related-content .carousel-arrow.prev {
-  padding-left: 1.5rem;
-  top: 46%;
-}
 .brand-stories__related-content .carousel-arrow.prev {
   left: 0;
-  margin-left: 16px;
+  padding-left: 1.5rem;
+  margin: 25px;
 }
 
 .brand-stories__related-content .carousel-arrow.next {
   right: 0;
-  margin-right: 16px;
+  padding-left: 1.5rem;
+  margin: 25px;
 }
