--- a/content-types/related-content/css/mobile.css
+++ b/content-types/related-content/css/mobile.css
@@ -1,15 +1,8 @@
 /* MOBILE RESPONSIVE VIEW */
-@media only screen and (max-width: 1296px) {
+@media only screen and (max-width: 1196px) {
   .brand-stories__related-content .carousel-arrow.next,
   .brand-stories__related-content .carousel-arrow.prev {
-    top: 42%;
-  }
-}
-
-@media only screen and (max-width: 1012px) {
-  .brand-stories__related-content .carousel-arrow.next,
-  .brand-stories__related-content .carousel-arrow.prev {
-    top: 38%;
+    top: 35%;
   }
 }
 
@@ -41,6 +34,7 @@
     scroll-snap-align: start;
     text-align: center; /* Center the content */
     margin-right: 0; /* Remove right margin */
+    padding: 0 30px;
   }
 
   .brand-stories__related-content .related-content__stories.row .col-lg-4 {
@@ -61,14 +55,8 @@
 
   .brand-stories__related-content .carousel-arrow.prev,
   .brand-stories__related-content .carousel-arrow.next {
-    top: 48%;
-  }
-}
-
-@media only screen and (max-width: 833px) {
-  .brand-stories__related-content .carousel-arrow.prev,
-  .brand-stories__related-content .carousel-arrow.next {
-    top: 45%;
+    margin: 26px;
+    top: 42%;
   }
 }
 
@@ -87,9 +75,10 @@
   }
 }
 
-@media only screen and (max-width: 396px) {
-  .brand-stories__related-content .carousel-arrow.next,
-  .brand-stories__related-content .carousel-arrow.prev {
-    top: 42%;
-  }
+
+@media only screen and (max-width: 356px) {
+  .brand-stories__related-content .carousel-arrow.next, 
+    .brand-stories__related-content .carousel-arrow.prev {
+      top: 35%;
+    }
 }
